src/objects/Compliance_Staff_Affiliations__c.object
<CustomObject>
    <description>Secondary Inspectors, Auditors, and Investigators affiliated with the Inspection/Complaint</description>
    <fields>
        <fullName>Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipName>Investigators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>MUSW__Inspection__c</referenceTo>
        <relationshipName>Investigators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigator_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assigned Staff</label>
    <nameField>
        <displayFormat>{YY}-{MM}-{0000}-STAFF</displayFormat>
        <label>Examiner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>